<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">BluetoothExample</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_search_remote">搜索设备</string>
    <string name="hello_world">你好，朋友</string>
    <string name="bluetooth_device_not_available">蓝牙设备不可用</string>
    <string name="send_button">发送</string>
    <string name="title_connected_to">已连接设备<xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_connecting">正在连接</string>
    <string name="title_not_connected">无连接</string>
    <string name="not_connected">未连接到任何设备</string>
    <string name="bluetooth_device_cannot_available">蓝牙设备无法启用</string>
    <string name="title_paired_devices">已配对设备</string>
    <string name="title_new_devices">新发现设备</string>
    <string name="no_devcie_have_been_paired">未发现已配对设备</string>
    <string name="scan_button">搜索</string>
    <string name="title_select_device">请选择设备</string>
    <string name="no_devices_found">未发现设备</string>
    <string name="menu_connect_service">连接网络服务器</string>
    <string name="connect_service_button">连接</string>
    <string name="address_label">地址</string>
    <string name="port_label">端口</string>
    <string name="title_connect_service">连接到服务</string>
</resources>
